--- a/packages/components/colorPicker/colorPicker.less
+++ b/packages/components/colorPicker/colorPicker.less
@@ -93,6 +93,28 @@
       }
     }
   }
+
+  &__range-input {
+    appearance: none;
+    display: block;
+    width: 100%;
+    height: 10px;
+    border-radius: 5px;
+    outline: none;
+
+    &::-webkit-slider-thumb {
+      appearance: none;
+      width: 10px;
+      height: 10px;
+      border-radius: 100%;
+      background-color: #fff;
+      box-shadow: 1px 1px 3px rgba(0, 0, 0, .4);
+    }
+
+    &.is-hsv {
+      background: linear-gradient(90deg,red 0,#ff0 17%,#0f0 33%,#0ff 50%,#00f 67%,#f0f 83%,red);
+    }
+  }
 }
 
 .vc-color-picker__hsl {
@@ -166,46 +188,13 @@
 }
 
 .vc-color-picker__control-model {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  flex-direction: column;
   flex: 1;
   margin: 0 0 0 10px;
 }
-.vc-color-picker__hue,
 .vc-color-picker__alpha {
-  position: relative;
   width: 100%;
   height: 10px;
-
-  &-bar {
-    width: 100%;
-    height: 100%;
-    cursor: pointer;
-  }
-
-  &-thumb {
-    position: absolute;
-    top: 50%;
-    left: 0;
-    width: 12px;
-    height: 12px;
-    background: #fff;
-    border-radius: 100%;
-    box-shadow: 1px 1px 3px rgba(0, 0, 0, .2);
-    transform: translate(-50%, -50%);
-    pointer-events: none;
-    cursor: pointer;
-  }
-}
-.vc-color-picker__hue {
-  background: linear-gradient(90deg,red 0,#ff0 17%,#0f0 33%,#0ff 50%,#00f 67%,#f0f 83%,red);
-
-  & + .vc-color-picker__alpha {
-    margin-top: 8px;
-  }
-}
-.vc-color-picker__alpha {
+  margin-top: 7px;
+  border-radius: 5px;
   background-image: url(data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAwAAAAMCAIAAADZF8uwAAAAGUlEQVQYV2M4gwH+YwCGIasIUwhT25BVBADtzYNYrHvv4gAAAABJRU5ErkJggg==);
 }
