--- a/packages/components/layer/layer.less
+++ b/packages/components/layer/layer.less
@@ -8,29 +8,19 @@
   z-index: 1000;
   overflow: auto;
 
-  .layer-inner {
+  &__inner {
     width: 50%;
     margin: 100px auto;
     background-color: #fff;
     border-radius: 3px;
     box-shadow: 2px 2px 3px rgba(0, 0, 0, 0.1);
 
-    & > .vc-layer__header {
-      position: relative;
-      font-size: 18px;
-      color: #333;
-      font-weight: 400;
-      text-align: left;
-      padding: 15px 40px 10px 20px;
-
-      i {
-        position: absolute;
-        top: 18px;
-        right: 15px;
-        width: 20px;
-        height: 20px;
-        cursor: pointer;
-      }
+    .vc-layer.is-fullscreen & {
+      width: 100vw;
+      height: 100vh;
+      margin: 0;
+      border-radius: 0;
+      overflow: auto;
     }
 
     & > .vc-layer__main {
@@ -44,6 +34,24 @@
       button + button {
         margin-left: 10px;
       }
+    }
+  }
+  
+  &__header {
+    position: relative;
+    font-size: 18px;
+    color: #333;
+    font-weight: 400;
+    text-align: left;
+    padding: 15px 40px 10px 20px;
+
+    i {
+      position: absolute;
+      top: 18px;
+      right: 15px;
+      width: 20px;
+      height: 20px;
+      cursor: pointer;
     }
   }
 }
