--- a/packages/components/table/table.less
+++ b/packages/components/table/table.less
@@ -32,7 +32,6 @@
     }
     
     .empty td {
-      line-height: 100px;
       text-align: center;
     }
   }
@@ -53,9 +52,8 @@
     left: 0;
     width: 100%;
     height: 100%;
-    display: flex;
-    align-items: center;
-    justify-content: center;
+    display: grid;
+    place-items: center;
     color: @color-text-regular;
     background: rgba(255, 255, 255, .5);
 
