--- a/packages/components/timePicker/timePicker.less
+++ b/packages/components/timePicker/timePicker.less
@@ -56,6 +56,7 @@
     padding: 5px 25px;
     width: 200px;
     border-radius: 3px;
+    color: #606266;
     border: 1px solid #dcdfe6;
     box-sizing: border-box;
     outline: none;
