--- a/packages/components/table/table.less
+++ b/packages/components/table/table.less
@@ -19,6 +19,7 @@
       padding: 10px 5px;
       font-size: 14px;
       color: #666;
+      word-break: break-all;
       border-bottom: 1px solid #eee;
       background-color: transparent;
       transition: background-color .3s ease-in-out;
