--- a/packages/components/confirm/confirm.less
+++ b/packages/components/confirm/confirm.less
@@ -10,8 +10,9 @@
   &-box {
     width: 400px;
     margin: 200px auto;
-    background: #fff;
+    background-color: #fff;
     border-radius: 10px;
+    overflow: hidden;
 
     &__header {
       display: flex;
@@ -37,7 +38,7 @@
     }
 
     &__content {
-      padding: 0 10px;
+      padding: 0 10px 10px;
       font-size: 14px;
       color: @color-text-regular;
     }
